# ball-beam-pid

./: Encaixe.stl  README.md  doc.md  main.py  projeto.md  pyproject.toml  run.sh  streamlit_frontend.py  suporte.stl  telemetrix_backend.py
arduino-debug/: arduino-debug.ino
debug/: Servo_debug.py
latex-doc/: report.tex
